# MultiCogTrust

./: .gitmodules  README.md  pyproject.toml  requirements.txt
components/: openSmile_feature.ipynb  segmentAudio.py
data/: loader.py
datasets/: loader.py
docs/: async_multimodal_pipeline_roadmap.md  audio_text_baseline_model_plan.md  iemocap_alignment_features.md
models/: gate_results.md  prososdicGate.py
src/: __init__.py  config.py  gazeClassifier.py  pipeline_demo.py  prosodicGate.py  segmentAudio.py  segmentAudioTorch.py  speechProsodic.py  textSentiment.py  transcribeAudio.py
src/audio/: __init__.py  capture.py  vad.py
src/core/: __init__.py  events.py
src/outputs/: output_df.csv
src/workers/: __init__.py  audio.py  transcribe.py
trust_tone_evaluator/: pyproject.toml
trust_tone_evaluator/checkpoints/: best_acc.pt
trust_tone_evaluator/scripts/: train.py
trust_tone_evaluator/src/trust_tone_evaluator/: __init__.py
trust_tone_evaluator/src/trust_tone_evaluator/data/: __init__.py  ravdess_dataset.py  trust_adapter.py
trust_tone_evaluator/src/trust_tone_evaluator/evaluation/: __init__.py  metrics.py
trust_tone_evaluator/src/trust_tone_evaluator/features/: __init__.py  base_extractor.py  opensmile_extractor.py
trust_tone_evaluator/src/trust_tone_evaluator/inference/: __init__.py  predictor.py
trust_tone_evaluator/src/trust_tone_evaluator/models/: __init__.py  base_model.py  mlp_model.py
trust_tone_evaluator/src/trust_tone_evaluator/output/: __init__.py  trust_metrics.py
trust_tone_evaluator/src/trust_tone_evaluator/training/: __init__.py  losses.py  trainer.py
